# ApplySync

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_baseline.py
backend/applysync/: cli.py  config.py  llm.py  observability.py  run_control.py
backend/config/: sources.yaml
backend/scripts/: build_eval_dataset.py  merge_duplicate_applications.py  pull_flagged_traces.py  replay_disambiguation.py  run_llm_judge_backfill.py
config/: sources.yaml
docs/: CHANGELOG.md  llmops-scorecard.md
docs/feasibility/: alembic-migrations.md  clickhouse-analyzer-fix.md  company-research-card.md  confidence-routed-merges.md  cross-provider-disambiguation-agent.md  disambiguation-date-arithmetic.md  disambiguation-evidence-gate.md  (+16 more)
eval/: run_eval.py
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
langfuse/: .env.example  docker-compose.yml
scripts/: gmail_probe.py  install-hooks.sh
searxng/: docker-compose.yml  settings.yml
tests/: conftest.py  fakes.py  test_api.py  test_config.py  test_disambiguate.py  test_eval_scoring.py  test_full_audit.py  test_full_scan.py  test_gmail_oauth.py  test_gmail_pagination.py  test_gmail_parsing.py  test_graph.py  test_init_db.py  test_observability.py  test_pipeline_nodes.py  test_query_builder.py  test_repository.py  test_research.py  test_review.py  test_sanitize.py  test_schema_drift.py  test_scrutiny.py  test_search.py  test_sync.py  test_web.py
(+90 files in other folders)
