[project]
name = "applysync"
version = "0.1.0"
description = "Email-driven, LLM-extraction job application tracker built on LangGraph."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "google-api-python-client>=2.140",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-nvidia-ai-endpoints>=0.3",
    "langchain-groq>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "sqlmodel>=0.0.22",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "apscheduler>=3.10",
    "typer>=0.12",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
observability = [
    "langfuse>=2.50",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[project.scripts]
applysync = "applysync.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
